# tinycrypto

./: CMakeLists.txt  README.md
cmake/: freertos_esp32_xtensa-esp32-elf.cmake  freertos_esp8266_xtensa-lx106.cmake  linux_arm-fsl.cmake  linux_arm.cmake  linux_x86.cmake  macos.cmake  openwrt_mt7688.cmake  windows_x86.cmake
source/: CMakeLists.txt
source/cmake/: linux_arm.cmake  linux_x86.cmake  macos.cmake  openwrt_mt7688.cmake  windows_x86.cmake
source/src/: CMakeLists.txt
source/src/base64/: base64.c  base64.h  tiny_base64.c  tiny_base64.h
source/src/bignum/: tiny_bignum.h  tiny_bignum_esp.h  tiny_bignum_polarssl.h
source/src/bignum/polarssl/: bignum.c  bignum.h  bn_mul.h  polarssl_config.h  polarssl_memory_buffer_alloc.c  polarssl_memory_buffer_alloc.h  polarssl_platform.c  polarssl_platform.h
source/src/chacha20/: ChaCha20.c  ChaCha20.h
source/src/chacha20poly1305/: chacha20poly1305.c  chacha20poly1305.h  tiny_chacha20poly1305.c  tiny_chacha20poly1305.h
source/src/common/: tiny_crypto_api.h
source/src/crypt25519/: crypt25519.c  crypt25519.h
source/src/curve25519/: Curve25519.c  Curve25519.h
source/src/ed25519/: Ed25519.c  Ed25519.h  ed25519.c  ed25519.h  fe.c  fe.h  ge.c  sc.c  tiny_ed25519.c  tiny_ed25519.h
source/src/ed25519_generator/: CMakeLists.txt  ed25519_generator.c
source/src/hkdf/: HKDF.c  HKDF.h
source/src/hmac/: hmac.c  hmac.h
source/src/poly1305/: Poly1305.c  Poly1305.h
source/src/secret/: SecretKey.h
source/src/sha/: sha1.c  sha1.h  sha512.c  sha512.h
source/src/srp/: SrpClient.c  SrpClient.h  SrpServer.c  SrpServer.h  srp_NG3072.h  srp_both.c  srp_both.h  srp_define.h
source/src/srp/local/: SrpClient.c  SrpServer.c  SrpServer.h  srp_NG3072.c
source/src/srp/remote/: SrpServer.c
source/src/srp_generator/: CMakeLists.txt  srp_generator.c
source/src/srp_test/: CMakeLists.txt  HapTestVectors.c  HapTestVectors.h  HapVectorsExample1.c  HapVectorsExample1.h  SrpVectors.h  test_random.c  test_srp_hap_vectors.c
source/src/x25519/: ed25519_key_exchange.c  ed25519_key_exchange.h  ge.h  sc.h  tiny_curve25519.c  tiny_curve25519.h  tiny_ed25519.c  tiny_ed25519.h  tiny_ed25519_key_exchange.c  tiny_ed25519_key_exchange.h  tiny_x25519_fe.c  tiny_x25519_fe.h  tiny_x25519_ge.c  tiny_x25519_ge.h  tiny_x25519_key_convert.c  tiny_x25519_key_convert.h  tiny_x25519_precomp_data.c  tiny_x25519_sc.c  tiny_x25519_sc.h
